07-Property/PropertyFile.g4
grammar PropertyFile;

@members {
def startFile(self):
    pass
def finishFile(self):
    pass
def defineProperty(self, name, value):
    pass
}
SL_COMMENT
    :   '//' .*? '\n' -> channel(2);   // channel(2)
top : {self.startFile()} prop+ {self.finishFile()};
prop : ID '=' STRING '\n' {self.defineProperty($ID, $STRING)};
ID   : [a-z]+ ;
STRING : '"' .*? '"' ;
